--- a/js_library/index.html
+++ b/js_library/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <div class="books_form" id="books_form">
+        <h1>Add book</h1>
         <input type="text" id="title" name="title" placeholder="Add book title here..."/>
         <input type="text" id="author" placeholder="Book author"/>
         <input type="text" id="pages" placeholder="Book page numbers"/>
+        <button id="btn">Add Book</button>
     </div>
-    <button id="btn">Add Book</button>
     <div class="books_page" id="books_page"></div>
     <script src="script.js"></script>
 </body>
